updating the port to 8888

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8888
+#Details of key store to be used in JWT creation
 keypair.alias=narif-key-pair
 keypair.keystore=narif-keystore.jks
 keypair.storepass=nArif@123
