Adding Spring Data JPA and Mysql stuffs
Spring Data JPA starter
MySql runtime
schema.sql and data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 server.port=8888
+
+#DB Configs
+spring.datasource.url=jdbc:mysql://localhost:3306/auth_server_db
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 #Details of key store to be used in JWT creation
 keypair.alias=narif-key-pair
 keypair.keystore=narif-keystore.jks
