--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,12 @@
 			<version>3.11.0</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
